[gd_scene load_steps=8 format=3 uid="uid://u8i1kcnp5gb4"]

[ext_resource type="Script" uid="uid://bjire6s1ospye" path="res://MECHANICS/player.gd" id="1_xiwui"]
[ext_resource type="Script" uid="uid://clrh75b88ne4k" path="res://UI/SCRIPTS/hotbar_ui.gd" id="2_vug0d"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_rdryi"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_vug0d"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5otfl"]
bg_color = Color(0.2, 0.2, 0.2, 0.8)

[sub_resource type="Theme" id="Theme_5otfl"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bd6lj"]
bg_color = Color(0.2, 0.2, 0.2, 0.8)

[node name="PLAYER" type="CharacterBody3D"]
script = ExtResource("1_xiwui")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
mesh = SubResource("CapsuleMesh_rdryi")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_vug0d")

[node name="Head" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.57019, 0)

[node name="Hand" type="Node3D" parent="Head"]

[node name="Camera3D" type="Camera3D" parent="Head"]

[node name="RayCast3D" type="RayCast3D" parent="Head/Camera3D"]
target_position = Vector3(0, 0, -5)

[node name="HotbarUI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("2_vug0d")

[node name="HBoxContainer" type="HBoxContainer" parent="HotbarUI"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -20.0
offset_top = -40.0
offset_right = 130.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 0

[node name="Slot1" type="PanelContainer" parent="HotbarUI/HBoxContainer"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2

[node name="Slot2" type="PanelContainer" parent="HotbarUI/HBoxContainer"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_5otfl")

[node name="Slot3" type="PanelContainer" parent="HotbarUI/HBoxContainer"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
theme = SubResource("Theme_5otfl")
theme_override_styles/panel = SubResource("StyleBoxFlat_bd6lj")
